spices/valkey/tests/errors/valkey-double-close.tur
;; U1 negative fixture: client-close consumes the :linear Client, so closing
;; the same client twice must be rejected under -Xsubstructural.
;;
;; Verify: tur check -Xsubstructural tests/errors/valkey-double-close.tur
;;   => error [TUR-E0101]: linear value 'c' used after being consumed
;;
;; Compile-fail fixture (see valkey-use-after-close.tur for the placement note).

(defmodule valkey_double_close_test
  (export)

(import valkey/client :refer [Client client-connect client-of client-close])

(defn double-close [] : int
  (let [c (client-of (client-connect "127.0.0.1" 6379))]
    (do
      (client-close c)    ;; the single legal consumption
      (client-close c)    ;; ERROR TUR-E0101: consume after consume
      0)))

) ;; end defmodule valkey_double_close_test
